force-app/main/default/objects/New_Customer_Event__e/New_Customer_Event__e.object-meta.xml
<CustomObject>
    <label>New Customer Event</label>
    <pluralLabel>New Customer Events</pluralLabel>
</CustomObject>