force-app/main/default/objects/New_Customer_Event__e/fields/AdditionalData__c.field-meta.xml
<CustomField>
    <fullName>AdditionalData__c</fullName>
    <description>A record with a baby...</description>
    <label>AdditionalData</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>