force-app/main/default/objects/New_Customer_Event__e/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Event context</description>
    <label>Context</label>
    <length>25</length>
    <type>Text</type>
</CustomField>