force-app/main/default/objects/New_Customer_Event__e/fields/ObjectRecordId__c.field-meta.xml
<CustomField>
    <fullName>ObjectRecordId__c</fullName>
    <description>SObject record id</description>
    <label>ObjectRecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>