force-app/main/default/objects/New_Customer_Event__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>